# fpl

./: .gitattributes  .gitignore  README.md  download-player-stats-data.sh  flake.nix  format-haskell-code.sh  fpl.cabal  watch-builder-runner.sh
data/: team-names.tsv
data/archive/gw07/: player-stats-snapshot.json  team-stats-snapshot.json
data/archive/gw08/: team-stats-snapshot.json
data/archive/gw10/: player-stats-snapshot.json  team-stats-snapshot.json
data/archive/gw11/: player-stats-snapshot.json  team-stats-snapshot.json
data/archive/gw12/: player-stats-snapshot.json  team-stats-snapshot.json
data/archive/gw13/: player-stats-snapshot.json  team-stats-snapshot.json
data/archive/gw14/: player-stats-snapshot.json  team-stats-snapshot.json
data/archive/gw15/: player-stats-snapshot.json  team-stats-snapshot.json
data/archive/gw16/: player-stats.json
data/archive/gw17/: player-stats.json  team-stats.json
data/archive/gw18/: player-stats.json  team-stats.json
data/archive/gw19/: player-stats.json  team-stats.json
data/archive/gw20/: player-stats.json  team-stats.json
data/archive/gw21/: player-stats.json  team-stats.json
data/archive/gw22/: player-stats.json  team-stats.json
data/archive/gw23/: player-stats.json  team-stats.json
data/archive/gw24/: player-stats.json  team-stats.json
data/archive/gw25/: player-stats.json  team-stats.json
data/archive/gw26/: player-stats.json  team-stats.json
data/archive/gw27/: player-stats.json  team-stats.json
data/archive/gw29/: player-stats.json  team-stats.json
data/archive/gw30/: player-stats.json  team-stats.json
data/archive/gw31/: player-stats.json  team-stats.json
data/archive/gw5/: player-stats-snapshot.json  team-stats-snapshot.json
data/archive/gw6/: player-stats-snapshot.json  team-stats-snapshot.json
data/archive/gw8/: player-stats-snapshot.json
data/archive/gw9/: player-stats-snapshot.json  team-stats-snapshot.json
data/snapshot/: matchweeks.json  player-stats.json  team-stats.json
data/truth/: 2024-results.json  results-and-fixtures.md  team-stats-snapshot.json
exe/: Reports.hs  Scratch.hs
exe/Reports/: Api.hs  Markup.hs  Server.hs
exe/Reports/Report/: Defence.hs  Fixtures.hs  PlayerPrediction.hs  PlayerTotals.hs
js/: scrape-fixtures.js  scrape-historical-results.js
src/: DoubleMap.hs  IndexedMap.hs  Memo.hs
src/FPL/: LoadData.hs  Model.hs  Reports.hs  Rules.hs  Stats.hs
src/FPL/Database/: Load.hs  Types.hs
src/FPL/LoadData/: Fixtures.hs  Historical.hs  MatchWeeks.hs  Players.hs  (+1 more)
(+2 files in other folders)
