cabal-version:      3.4
name:               fpl
version:            0.1.0.0

common shared
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        LambdaCase
        MultiWayIf
        OverloadedStrings
        RecordWildCards
    build-depends:
        aeson,
        base ^>=4.21.0.0,
        containers,
        mtl,
        text,
        time

library
    import:           shared
    exposed-modules:
        FPL.LoadData
        FPL.LoadData.Historical
    hs-source-dirs:   src

executable scratch
    import: shared
    build-depends: fpl
    main-is: Scratch.hs
    hs-source-dirs: exe
