cabal-version:      3.4
name:               fpl
version:            0.1.0.0

common shared
    ghc-options: -Wall
    default-language: GHC2021
    default-extensions:
        DataKinds
        DerivingStrategies
        LambdaCase
        MultiWayIf
        OverloadedStrings
        RecordWildCards
    build-depends:
        aeson,
        base ^>=4.21.0.0,
        containers,
        mtl,
        text,
        time,

library
    import:           shared
    exposed-modules:
        FPL.LoadData.Fixtures
        FPL.LoadData.Historical
        FPL.LoadData.Players
        FPL.Reports
        FPL.Reports.Team
        FPL.Reports.Player
    hs-source-dirs:   src

executable reports
    import: shared
    build-depends:
        filepath,
        lucid,
        servant,
        servant-lucid,
        servant-server,
        warp,
        fpl,
    main-is: Reports.hs
    hs-source-dirs: exe
    other-modules:
        Reports.Api
        Reports.Server
